<resources>
    <string name="app_name">MoxyDemo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">login</string>

    <string name="oops_something_went_wrong">Oops! Something went wrong…</string>
    <string name="no_data">No data</string>
    <string name="an_error_has_occurred_click_here_to_retry">An error has occurred! Click here to retry</string>
    <string name="an_error_has_occurred">Oops! Something went wrong…</string>
    <string name="hint">hint</string>
    <string name="hint_email">user@email.com</string>
    <string name="hint_password">passw0rd</string>
    <string name="wrong_username_or_password">Wrong username or password</string>
    <string name="login_success">Login success</string>
    <string name="search">Search</string>
    <string name="favourites">Favourites</string>
    <string name="logout">LogOut</string>
    <string name="lorem" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="title_activity_favourites">FavouritesActivity</string>
    <string name="you_dont_have_any_favourites">You don\'t have any favourites</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="title_activity_maps">Map</string>
</resources>
