<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search_white_18px"
        android:orderInCategory="1"
        app:showAsAction="always"
        android:title="@string/search"/>

    <item
        android:id="@+id/favourites"
        android:icon="@drawable/ic_star_rate_white_18px"
        android:orderInCategory="2"
        app:showAsAction="always"
        android:title="@string/favourites"/>

    <item
        android:id="@+id/logOut"
        android:icon="@drawable/ic_exit_to_app_white_18px"
        android:orderInCategory="3"
        app:showAsAction="always"
        android:title="@string/logout"/>

</menu>